--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,13 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           export_default_credentials: true
 
-      - name: Authenticate with Service Account
-        run: |
-          echo "${{ secrets.GCP_SA_KEY }}" > /tmp/keyfile.json
-          gcloud auth activate-service-account --key-file=/tmp/keyfile.json
+      - name: Authenticate to GCP Project
+        id: auth
+        uses: google-github-actions/auth@v1
+        with:
+          project_id: ${{ inputs.gcp_project_id }}
+          workload_identity_provider: projects/513874589078/locations/global/workloadIdentityPools/jokers-pool/providers/jokers-provider
+          service_account: jokers-gang2@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
 
       - name: Build Docker image
         run: |
