--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -50,7 +50,7 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  GAR_LOCATION: europe-west4/jokers-repository
+  GAR_LOCATION: europe-west4
   SERVICE: hang-image
   REGION: europe-west4
 
@@ -95,7 +95,7 @@ jobs:
       - name: Build and Push Container
         run: |-
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/jokers-repository/${{ env.SERVICE }}:${{ github.sha }}"
 
       # END - Docker auth and build
 
