--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -94,8 +94,9 @@ jobs:
 
       - name: Build and Push Container
         run: |-
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/jokers-repository/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/jokers-repository/${{ env.SERVICE }}:${{ github.sha }}"
+          docker build -t "europe-west4-docker.pkg.dev/ingka-native-ikealabs-dev/jokers-repository/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "europe-west4-docker.pkg.dev/ingka-native-ikealabs-dev/jokers-repository/${{ env.SERVICE }}:${{ github.sha }}"
+
 
       # END - Docker auth and build
 
